--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "next",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/icons": "next",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
-    "@material-ui/styles": "^4.11.4",
+    "@material-ui/styles": "next",
     "aos": "^2.3.4",
     "clsx": "^1.1.1",
     "jarallax": "^1.12.7",
@@ -54,6 +54,8 @@
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
