--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "husky": "pretty-quick --staged && yarn prettier && yarn tslint",
     "prettier": "prettier --write \"*/**/*.{js,ts,tsx,json}\"",
     "tslint": "tsc --noEmit && eslint \"*/**/*.{js,ts}\" --quiet",
-    "test:unit": "cross-env NODE_ENV=testing jest --no-cache  --detectOpenHandles --runInBand --forceExit",
+    "test:unit": "cross-env NODE_ENV=testing jest -u --maxWorkers=4",
+    "test:coverage": "yarn test:unit --coverage",
+    "test:watch": "yarn test:unit --watch --verbose",
     "prepare": "husky install",
     "commit": "cz",
     "commit:signed": "cz -S",
@@ -63,6 +65,7 @@
     "@testing-library/react-hooks": "^7.0.1",
     "@types/aos": "^3.0.4",
     "@types/history": "^4.7.9",
+    "@types/jest": "^27.0.1",
     "@types/js-cookie": "^2.2.7",
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^16.6.2",
@@ -74,6 +77,8 @@
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.0.6",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-styled-components": "^1.13.2",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
@@ -91,10 +96,16 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.11.0",
     "husky": "^7.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.6",
+    "jest-environment-jsdom": "^27.0.6",
+    "jsdom": "^17.0.0",
+    "jsdom-global": "^3.0.2",
     "prettier": "^2.3.2",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
     "pretty-quick": "^3.1.1",
+    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5"
   },
